<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FieldDBLib</string>
    <string name="speech_app_name">SpeechRecognizer</string>
    <string name="title_datum_detail">Datum</string>
    <string name="app_explanation"></string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_put_in_trash">Are you sure you want to put this datum in the trash?</string>

    <!-- Recognition prompts -->
    <string name="im_listening">I\'m listening</string>
    <string name="i_cant_listen">I\'m sorry, your device is strange. It cannot recognize speech.</string>
    <string name="i_might_have_heard">I might have heard: </string>
    <string name="or_maybe">Or maybe this: </string>
    <string name="there_were_others">. I\'m pretty funny, ey? There were some other options, but I think I\'ll stop there. </string>
    <string name="train">წვრთნა</string>
    <string name="recognize">Recognize</string>
    <string name="tap_to_speak">Tap to speak again</string>
    <string name="tap_to_end">Tap to end</string>
    <string name="speak_now">Speak now</string>
    <string name="dialog_continue_to_advanced_training">Add your own words?</string>
    <string name="continue_word">Continue</string>
    <string name="finished">Enough</string>
    <string name="context">კონტექსტში</string>
    <string name="orthography">ფრაზა</string>
    <string name="tag_hint">WebSearch, SMS, Email</string>
    <string name="translation_hint"></string>
    <string name="remove">Remove</string>
    <string name="no_recognized_result">I didn\'t hear anything...</string>
    <string name="hypothesis">Hypothesis</string>

    <!-- PocketSphinx -->
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="kws_caption">To start demonstration say \"okay android\".</string>
    <string name="menu_caption">Say \"digits\" or \"forecast\" to choose particular example.</string>
    <string name="digits_caption">Let\'s recognize some digits: say something like \"one two three four five\".</string>
    <string name="forecast_caption">Say something typical to a weather forecast like \"sunny spells on Wednesday\".</string>

    <!-- Generic Setting strings -->
    <string name="preference_choose_language_title">Choose Language</string>
    <string name="preference_choose_language_summary">You can choose any of the available languages for the experiment\'s stimuli.</string>
    <string name="preference_optional">Optional</string>
    <string name="preference_user_guide_title">User Guide</string>
    <string name="preference_user_guide_summary">Click on this link to download 
        Chiodo, Marquis, Achim, Dessureault, Nguyen, Royle 2013 which discusses the OPrime library project
         data collection in a clinical or research context. </string>
    <string name="preference_about">About</string>
    <string name="preference_visit_bug_tracker">Contact Us</string>
    <string name="preference_visit_bug_tracker_summary">Report a bug or request a feature</string>
    <string name="preference_thanks_title">Special Thanks</string>
    <string name="preference_licence_title">License</string>
    <string name="preference_misc">More Information</string>
    <string name="cancel_label">Cancel</string>
    <string name="ok_label">OK</string>

    <!-- Strings which should be customized -->
    <string name="preference_about_title">About OPrime</string>
    <string name="preference_about_summary">OPrime: Open Experimentation was created by the 
		iLanguage Lab ltd, an OpenSource Fieldlinguistics company in Montreal, Canada.</string>
    <string name="preference_visit_site">Go to the OPrime CodeBase</string>
    <string name="preference_visit_site_summary">On the OPrime site you can 
        access all our issues and milestones which serve as instructions and documentation of how to use this code base.</string>
    <string name="preference_thanks_summary">Special thanks to the Montreal Computational Linguistics community, 
        Android Montreal, Javascript Montreal and the Android Open
		Source developers for their work which directly or indirectly
		contributed to this project.</string>
    <string name="preference_licence_summary">The Experiment designs and stimuli are copyright their original
		authors, see the Experiment Home screen for details for each
		Experiment. OPrime: Open Experimentation for Android is released under 
		the Apache 2.0 License. Free to modify the code to your needs!</string>

    <!-- Stop Watch strings -->
    <string name="chronometer_start">Start</string>
    <string name="chronometer_stop">Pause</string>
    <string name="chronometer_reset">Reset</string>
    <string name="chronometer_set_format">Set format string</string>
    <string name="chronometer_clear_format">Clear format string</string>
    <string name="chronometer_initial_format">%s</string>

    <!-- Experiment strings -->
    <string name="experiment_trial_header">ParticipantID,StartTime,EndTime,ExperimenterID</string>
    <string name="experiment_title">Sample OPrime Experiment</string>
    <string name="experiment_ready_message">Experiment Trial is ready</string>
    <string name="experiment_start_instructions">Touch Start to take Participants Background Info</string>
    <string name="experiment_completed_message">Tablet Experiment completed!</string>

</resources>
