<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#232323"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/train_speech_recognizer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:gravity="center"
            android:onClick="onTrainClick"
            android:src="@drawable/speech_recognizer_listening" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/train"
            android:textColor="#ffffff" />

        <ImageButton
            android:id="@+id/run_speech_recognizer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:gravity="center"
            android:onClick="onRecognizeClick"
            android:src="@drawable/speech_recognizer_recognizing" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recognize"
            android:textColor="#cccccc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="goToWebSite"
            android:clickable="true"
            android:text="@string/app_explanation"
            android:textColor="#ffffff" />
    </LinearLayout>

</ScrollView>